name:                huave
version:             0.1.0.0
homepage:            https://github.com/githubuser/huave#readme
license:             BSD3
license-file:        LICENSE
author:              John C. Lavelle
maintainer:          john@lavelle.tech
copyright:           2017 John C. Lavelle
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable huave
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai
                     , http-types
                     , mtl
                     , transformers
                     , text
                     , bytestring
